crates/ogre-crypto/tests/compile_fail/ogre_signed_not_fully_approved.stderr
warning: unreachable statement
 --> tests/compile_fail/ogre_signed_not_fully_approved.rs:8:5
  |
7 |     let request: SignedRequest<OgreSigned> = unreachable!();
  |                                              -------------- any code following this expression is unreachable
8 |     requires_fully_approved(request);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
  |
  = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
 --> tests/compile_fail/ogre_signed_not_fully_approved.rs:8:29
  |
8 |     requires_fully_approved(request);
  |     ----------------------- ^^^^^^^ expected `SignedRequest<FullyApproved>`, found `SignedRequest<OgreSigned>`
  |     |
  |     arguments to this function are incorrect
  |
  = note: expected struct `SignedRequest<FullyApproved>`
             found struct `SignedRequest<OgreSigned>`
note: function defined here
 --> tests/compile_fail/ogre_signed_not_fully_approved.rs:4:4
  |
4 | fn requires_fully_approved(_req: SignedRequest<FullyApproved>) {}
  |    ^^^^^^^^^^^^^^^^^^^^^^^ ----------------------------------
